packages/frontend/src/components/dialogs/ReactionsDialog/styles.module.scss
.reactionsDialogList {
  margin: 0;
}

.reactionsDialogListItem {
  align-items: center;
  display: flex;
  justify-content: space-between;
  border-radius: 10px;
}

.reactionsDialogListClickable {
  cursor: pointer;
  &:hover {
    background-color: var(--chatListItemBgHover);
  }
}

.reactionsDialogAvatar {
  flex: 0 0 48px;
  margin-right: 10px;
}

.reactionsDialogContactName {
  flex: 1;
  margin-right: 10px;
  overflow: hidden;
}

.reactionsDialogEmoji {
  flex: 0 0 50px;
  font-size: 20px;
  text-align: center;
}

